--- a/src/pages/milktea/milktea.css
+++ b/src/pages/milktea/milktea.css
@@ -35,6 +35,14 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+  width: 100%;
+  margin: auto;
+  max-width: 720px;
+  margin-top: 60px;
+}
+
+.tea__sizes p {
+  cursor: pointer;
 }
 
 .list__item > div {
